tests/bug_detector_tests/StrictMode11_4_1_3_a.test
################################################################################
#    Copyright (c) 2013, KAIST.
#    All rights reserved.
#
#    Use is subject to license terms.
#
#    This distribution may include materials developed by third parties.
################################################################################
tests=StrictMode11_4_1_3_a
BUGDETECTOR_TESTS_DIR=${JS_HOME}/tests/bug_detector_tests
bug-detector
bug-detector_out_WCIequals=\
 \n\
* Bug Detector * \n\
StrictMode11_4_1_3_a.js:3:1~3:18: [SyntaxError] 'this.x_R13' must not be a reference to a non-existent property within strict mode code. \n\
StrictMode11_4_1_3_a.js:6:12~6:16: [Warning] 'this' refers the global object. \n\
 \n\
============== Total Count ============== \n\
|  RangeErrors       :      0 (  0.00%) | \n\
|  ReferenceErrors   :      0 (  0.00%) | \n\
|  SyntaxErrors      :      1 ( 50.00%) | \n\
|  TypeErrors        :      0 (  0.00%) | \n\
|  URIErrors         :      0 (  0.00%) | \n\
|  Warnings          :      1 ( 50.00%) | \n\
========================================= \n\
============ Statistics ============= \n\
|  AbsentRead              :      0 | \n\
|  BinaryOperator          :      0 | \n\
|  BuiltinTypeError        :      0 | \n\
|  BuiltinWrongArgType     :      0 | \n\
|  CallConstFunc           :      0 | \n\
|  CallNonConstructor      :      0 | \n\
|  CallNonFunction         :      0 | \n\
|  ConditionalBranch       :      0 | \n\
|  ConvertToNumber         :      0 | \n\
|  DefaultValue            :      0 | \n\
|  Deprecated              :      0 | \n\
|  FunctionArgSize         :      0 | \n\
|  GlobalThis              :      1 | \n\
|  ImplicitTypeConversion  :      0 | \n\
|  AccessingNullOrUndef    :      0 | \n\
|  PrimitiveToObject       :      0 | \n\
|  RangeError              :      0 | \n\
|  Shadowing               :      0 | \n\
|  StrictMode              :      1 | \n\
|  UncalledFunction        :      0 | \n\
|  UnreachableCode         :      0 | \n\
|  ValueNeverRead          :      0 | \n\
|  VaryingTypeArguments    :      0 | \n\
|  WrongThisType           :      0 | \n\
|  RegularExpression       :      0 | \n\
|  WrongArgument           :      0 | \n\
===================================== \n\
\n
bug-detector_err_equals=
