tests/bug_detector_tests/StrictMode11_4_1_3_a.js
"use strict";

delete this.x_R13;

function notStrict() {
    delete this.x_R13;
}

notStrict();
